fix: fixed so you can't add pokemon from the release page. Also made the login page more readable

--- a/src/app/pages/login/login.page.css
+++ b/src/app/pages/login/login.page.css
@@ -3,5 +3,5 @@ div {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 30vh;
+    height: 60vh;
 }
